apps/Tests/src/pages/Errors/Duplicate_EntranceIDs/index.astro
---

	//###  Layout  ###//
	import Layout from "Layouts/Main/Layout.astro"

---



<Layout>

	<portal-entrance to="Portal" slot="A">
		{"Portal Content 1"}
	</portal-entrance>

	<portal-destination name="Portal" transfer-mode="Multiple" slot="B"/>

</Layout>
